syntax = "proto3";
package soarchain.poa;

import "gogoproto/gogo.proto";
import "poa/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "soarchain/x/poa/types";

// GenesisState defines the poa module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
